[dnd5e-2024] dark mode fixes

--- a/block-system-2.0/dnd5e/monster-2020/style.css
+++ b/block-system-2.0/dnd5e/monster-2020/style.css
@@ -266,4 +266,5 @@ textarea {
  .badge { background: none; font-size: 20px; float:right}
  .rolldice { font-size: 20px}
  .cr { font-family: Eczar Bold!important; font-size: 36px; color: #58180d !important}
+ .ibox-content, .card-box, .ibox-content { background-color: #00000000 !important }
  .euclid-editor .cm-line,  .bn-editor, .bn-editor:focus { font-size:16px !important; caret-color: #ffffff !important; color: #ffffff !important; -webkit-text-fill-color: #ffffff !important; background-color: #202020 !important}
